# home-network

./: .gitattributes  Cargo.toml  README.md  clean-all
design/: box_overview_diagram.xml  overview_diagram.xml
getset-cli/: Cargo.toml
getset-cli/src/: get.rs  lib.rs  list_all.rs  listen.rs  main.rs  set.rs
grafana/: README.md  start-server
influxdb-bcast-collector/: Cargo.toml  README.md
influxdb-bcast-collector/src/: lib.rs  main.rs
param-desc/: Cargo.toml  README.md  build.rs  example.toml  paramdb.toml
param-desc/src/: lib.rs  node_desc.rs  node_id.rs  node_name.rs  param.rs  param_desc.rs  param_id.rs  param_name.rs
paramdb/: Cargo.toml  README.md  paramdb.toml
params/: .gitignore  Cargo.toml  TODO.md
params/src/: error.rs  flags.rs  frame.rs  getset.rs  id.rs  lib.rs  parameter.rs  parameter_frame.rs  ref_response.rs  request.rs  request_frame.rs  response.rs  response_frame.rs  value.rs  wire.rs
params/src/wire/: getset.rs  mod.rs  parameter.rs  parameter_id_list.rs  parameter_list.rs
params/tests/: round_trip.rs
template-box-controller/: Cargo.toml  README.md  flash-firmware
template-box-controller/src/: error.rs  lib.rs  main.rs  panic_handler.rs  params.rs  sys_clock.rs
template-box-controller/src/net/: eth.rs  getset_protocol.rs  mod.rs
