[package]
name = "getset-cli"
version = "0.1.0"
authors = ["Jon Lamb"]
edition = "2018"

[lib]
name = "getset_cli"
path = "src/lib.rs"

[[bin]]
name = "getset-cli"
path = "src/main.rs"

[dependencies]
structopt = "0.3.7"
log = "0.4.8"
simple_logger = "1.4.0"

[dependencies.params]
path = "../params"
