[package]
name = "params"
version = "0.1.0"
authors = ["Jon Lamb"]
edition = "2018"

[dependencies]
static_assertions = "1.1.0"
bitfield = "0.13.2"
heapless = "0.5.2"
typenum = "*"

[dependencies.byteorder]
version = "1.3.2"
default-features = false

[dev-dependencies]
pretty_assertions = "0.6.1"

[dev-dependencies.approx]
version = "0.3"
default-features = false
